@@ -69,6 +69,10 @@ Other Changes and Additions
 - Improved behavior when writing large compressed images on OSX by removing an
   unncessary check for platform architecture. (spacetelescope/PyFITS#57)
 
+- Allow reading FITS files from file-like objects that do not have a
+  ``.closed`` attribute (and as such may not even have an "open" vs. "closed"
+  concept). (spacetelescope/PyFITS#56)
+
 
 3.1.6 (unreleased)
 ------------------
@@ -85,6 +89,10 @@ Other Changes and Additions
 
 - Improved behavior when writing large compressed images on OSX by removing an
   unncessary check for platform architecture. (Backported from 3.2.3)
+
+- Allow reading FITS files from file-like objects that do not have a
+  ``.closed`` attribute (and as such may not even have an "open" vs. "closed"
+  concept). (Backported from 3.2.3)
 
 
 3.2.2 (2014-03-25)
